--- a/.github/workflows/discover.yaml
+++ b/.github/workflows/discover.yaml
@@ -1,3 +1,8 @@
+name: Check New Places
+
+on:
+  workflow_dispatch:
+
 jobs:
   check_new_places:
     runs-on: ubuntu-latest
@@ -17,7 +22,7 @@ jobs:
         pip install requests
 
     - name: Run script
-      run: python check_places.py
+      run: python run.py
       env:
         GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
