--- a/.github/workflows/discover.yaml
+++ b/.github/workflows/discover.yaml
@@ -33,5 +33,5 @@ jobs:
         git add -A
         timestamp=$(date -u)
         git commit -m "Updated places list at $timestamp" || exit 0
-        git push
+        git push https://${{ secrets.GH_TOKEN }}@github.com/JonathanGrant/GMapsDiscovery.git
 
