--- a/.github/workflows/discover.yaml
+++ b/.github/workflows/discover.yaml
@@ -28,8 +28,8 @@ jobs:
 
     - name: Commit and push if it changed
       run: | 
-        git config user.name "Automated"
-        git config user.email "actions@users.noreply.github.com"
+        git config user.name "JonathanGrant"
+        git config user.email "jonathanallengrant@gmail.com"
         git add -A
         timestamp=$(date -u)
         git commit -m "Updated places list at $timestamp" || exit 0
