--- a/.github/workflows/discover.yaml
+++ b/.github/workflows/discover.yaml
@@ -6,6 +6,8 @@ on:
 jobs:
   check_new_places:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - name: Check out code
