--- a/.github/workflows/discover.yaml
+++ b/.github/workflows/discover.yaml
@@ -2,6 +2,8 @@ name: Check New Places
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '6 8 * * *' # This schedules the action to run every day at 8am UTC which is 4am EDT
 
 jobs:
   check_new_places:
